k8s_deployment-east.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-website
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: site
        image: gcr.io/np-com/simple_website:east
        ports:
        - containerPort: 80
          protocol: TCP
